[package]
name = "judge"
version = "0.1.0"
authors = ["Lancern <msrlancern@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"error-chain" = "0.12"
"log" = "0.4"
"libc" = "0.2"
"nix" = "0.15"
"sandbox" = { path = "../sandbox" }
