[package]
name = "judge"
version = "0.1.0"
authors = ["Lancern <msrlancern@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"error-chain" = "0.12"
"log" = "0.4"
"libc" = "0.2"
"nix" = "0.15"
"tempfile" = "3.1"
"sandbox" = { path = "../sandbox" }
"libloading" = "0.5"

# The following dependency is used in the `judge-bin` binary.
"clap" = "2.33"
"stderrlog" = "0.4"

"serde" = { version = "1.0", optional = true }
