[package]
name = "sandbox"
version = "0.1.0"
authors = ["Lancern <msrlancern@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"error-chain" = "0.12"
"libc" = "0.2"
"nix" = "0.15"
"seccomp-sys" = "0.1"
"procinfo" = "0.4"

# The following dependency is used in `sandbox-bin` binary.
"clap" = "2.33"
